optimizeLegibility isnt ready for primetime. text goes invisible on webos, breaks small-caps, and is weird on linux. I hope we can add it back after the bugs are fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,7 @@ body, select, input, textarea { color:#444; }
 
 /* Headers (h1,h2,etc) have no default font-size or margin,
    you'll want to define those yourself. */ 
- 
-/* www.aestheticallyloyal.com/public/optimize-legibility/ */ 
-h1,h2,h3,h4,h5,h6 { font-weight: bold; text-rendering: optimizeLegibility; }
+h1,h2,h3,h4,h5,h6 { font-weight: bold; }
 
 /* maxvoltar.com/archive/-webkit-font-smoothing */
 html { -webkit-font-smoothing: antialiased; }
